--- a/templates/counselor/feedback_student.html
+++ b/templates/counselor/feedback_student.html
@@ -81,9 +81,11 @@ margin-bottom:15px;
 }
 .pText{
   font-weight: 600;
+  font-size: 20px;
 }
 .bText{
   color: #000;
+  font-size: 20px;
 }
 .form-field{
   height: 900px;
@@ -177,21 +179,10 @@ margin-bottom:15px;
              <p class="pText"><b class="bText">Prepared by: &nbsp;</b> {{info2.firstname}} {{info2.lastname}}</p>
             <br> 
             <button class="button" style="font-weight: bold; color: #454545;">Submit</button>
+            <br> <br>
             </form>
 
-<br>
-          
-
           </div>
-          </div>
-
-
-        <div class="column">
-          <div class="row1"> 
-        
-            &nbsp;    &nbsp;   
-          </div>
-         
           </div>
         
     </form>
