--- a/templates/director/assign_counselor.html
+++ b/templates/director/assign_counselor.html
@@ -116,6 +116,7 @@ Assign Counselor
     align-items: center;
     justify-content: center;
     padding: 20px;
+    color: #000;
   }
   
   .buttonF {
@@ -127,8 +128,8 @@ Assign Counselor
   font-size: 15px;
   text-transform: uppercase;
   letter-spacing: 2.5px;
-  font-weight: 600;
-  color: #fff;
+  font-weight: bolder;
+  color: #000;
   background-color: #d8c090;
   border: none;
   border-radius: 8px;
