--- a/templates/director/viewoffering.html
+++ b/templates/director/viewoffering.html
@@ -145,6 +145,15 @@ cursor: pointer;
 outline: none;
 
   }
+  .parent_tr{
+     font-size: 17px;
+  }
+.parent_td{
+ text-align: left; border: solid 1px #DDEEEE;
+color: #333;
+padding: 10px;
+text-shadow: 1px 1px 1px #fff;
+}
 </style>
     
 
@@ -156,31 +165,33 @@ outline: none;
   <table class="fl-table">
       <thead>
       <tr>
-          <th>Offer Code</th>
-          <th>Days</th>
-          <th>Time</th>
-          <th>Room</th>
-          <th>Subject Code</th>
-          <th>Academic Year</th>
+          <th class="parent_tr">Offer Code</th>
+          <th class="parent_tr">Days</th>
+          <th class="parent_tr">Time</th>
+          <th class="parent_tr">Room</th>
+          <th class="parent_tr">Subject Code</th>
+          <th class="parent_tr">Academic Year</th>
       </tr>
       </thead>
       {% for form in forms %}
       <tbody>
       <tr>
-          <td>{{form.offer_code}}</td>
-          <td>{{form.days}}</td>
-          <td>{{form.start_time}} - {{form.end_time}} </td>
-          <td>{{form.room}}</td>
-          <td>{{form.subject_code}}</td>
-          <td>{{form.academic_year}}</td>
+          <td style="font-size: 16px;" class="parent_td">{{form.offer_code}}</td>
+          <td style="font-size: 16px;" class="parent_td">{{form.days}}</td>
+          <td style="font-size: 16px;" class="parent_td">{{form.start_time}} - {{form.end_time}} </td>
+          <td style="font-size: 16px;" class="parent_td">{{form.room}}</td>
+          <td style="font-size: 16px;" class="parent_td">{{form.subject_code}}</td>
+          <td style="font-size: 16px;" class="parent_td">{{form.academic_year}}</td>
         
       </tr>
       <tbody>
         {% endfor %}
   </table>
+<div style="padding: 2px;">
   {% if not forms %}
-<center><p><b>No Data Available</b></p></center>
+<center><p style="font-size: 18px;"><b>No Data Available</b></p></center>
 {% endif %}
+</div>
 </div>
 
 
