--- a/templates/student/add_info.html
+++ b/templates/student/add_info.html
@@ -178,7 +178,7 @@ font-size: 15px;
 text-transform: uppercase;
 letter-spacing: 2.5px;
 font-weight: 600;
-color: #fff;
+color: #000;
 background-color: #d8c090;
 border: none;
 border-radius: 8px;
