--- a/templates/student/student_edit_profile_view.html
+++ b/templates/student/student_edit_profile_view.html
@@ -25,7 +25,7 @@ font-size: 15px;
 text-transform: uppercase;
 letter-spacing: 2.5px;
 font-weight: 600;
-color: #fff;
+color: #000;
 background-color: #d8c090;
 border: none;
 border-radius: 8px;
@@ -288,20 +288,20 @@ margin-bottom:15px;
             <div class="column">
               
               <div class="row">    
-                <p style=""><h3>Student's Personal Information</h3></p>
+                <p><h3 style="font-size: 22.5px;">Student's Personal Information</h3></p>
                 <p class="pText"><b class="bText">First Name: </b>{{info.firstname}}</p> 
                 <p class="pText"><b class="bText" >Last Name: &nbsp;</b>{{info.lastname}}</p> 
                 <p class="pText"><b class="bText" >Student Number: &nbsp;</b>{{info.studnumber}}</p> 
                 <br> <br> 
-                <h3>*Required</h3>
-                <i>By No Means of Mother/Father, input N/A.</i>
-                <p><h3>Mothers Personal Information</h3></p>
+                <h3 style="font-size: 22.5px;">*Required</h3>
+                <i style="font-size: 18px;">By No Means of Mother/Father, input N/A.</i>
+                <p><h3 style="font-size: 22.5px;">Mothers Personal Information</h3></p>
                 <p class="pText"><b class="bText">Mother's Firstname: &nbsp;</b>{{info.mother_firstname}}</p>
                 <p class="pText"><b class="bText">Mother's Lastname: &nbsp;</b>  {{info.mother_lastname}}</p>
                 <p class="pText"><b class="bText">Contact Number: <br></b>  {{info.mother_contact_number}}</p>
 
                 <br> <br>
-                <p><h3>Guardian Personal Information</h3></p>
+                <p><h3 style="font-size: 22.5px;">Guardian Personal Information</h3></p>
                 <p class="pText"><b class="bText">Guardian's  Firstname: &nbsp;</b>{{info.guardian_firstname}}</p>
                 <p class="pText"><b class="bText">Guardian's   Lastname: &nbsp;</b>  {{info.guardian_lastname}}</p>
                 <p class="pText"><b class="bText">Contact Number: <br></b>  {{info.guardian_contact_number}}</p>
@@ -323,7 +323,7 @@ margin-bottom:15px;
               <div class="column">
                 <div class="row1"> 
                   <br> <br> <br> <br>
-                  <p><h3>Fathers Personal Information</h3></p>
+                  <p><h3 style="font-size: 22.5px;">Fathers Personal Information</h3></p>
                   <p class="pText"><b class="bText">Father's Lastname: &nbsp;</b>  {{info.father_lastname}}</p>
                   <p class="pText"><b class="bText">Father's Firstname: &nbsp;</b> {{info.father_firstname}}</p>
                   <p class="pText"><b class="bText">Contact Number: &nbsp;</b> {{info.father_contact_number}}</p>
