--- a/templates/teacher/notification.html
+++ b/templates/teacher/notification.html
@@ -148,7 +148,6 @@ p{
       padding: 20px;
     }
     
-    #customers tr:nth-child(even){background-color: #f2f2f2;}
     
     #customers tr:hover {background-color: #ddd;}
     
@@ -178,7 +177,7 @@ font-size: 15px;
 text-transform: uppercase;
 letter-spacing: 2.5px;
 font-weight: 600;
-color: #fff;
+color: #000;
 background-color: #d8c090;
 border: none;
 border-radius: 8px;
@@ -202,7 +201,7 @@ outline: none;
 
 {% if not notifications %}
 
-<center><b><p>No Notifications Yet!</p></b></center>
+<center><b><p style="font-size: 18.5px;">No Notifications Yet!</p></b></center>
 
 {% endif %}
 <br>
