--- a/templates/teacher/refer_a_student.html
+++ b/templates/teacher/refer_a_student.html
@@ -264,7 +264,7 @@ font-size: 15px;
 text-transform: uppercase;
 letter-spacing: 2.5px;
 font-weight: 600;
-color: #fff;
+color: #000;
 background-color: #4863A0;
 border: none;
 border-radius: 45px;
@@ -529,8 +529,8 @@ flex-direction: column;
   <div class="first_form_column">
 
               <div class="column">
-                <p class="pText"><b class="bText"></b>{{form1.firstname}} First Name</p> 
-                <p class="pText"><b class="bText" ></b>{{form1.lastname}} Last Name</p> 
+                <p class="pText"><b class="bText"></b>{{form1.firstname}} &nbsp;First Name</p> 
+                <p class="pText"><b class="bText" ></b>{{form1.lastname}} &nbsp;Last Name</p> 
             
               </div>
   
@@ -538,8 +538,8 @@ flex-direction: column;
 <div class="second_form_column">
             <div class="column">
            
-                <p class="pText"><b class="bText"></b>{{form1.studnumber}} Student ID</p>
-                <p class="pText"><b class="bText"></b>{{form1.subject_referred}} Subject Reffered</p>                
+                <p class="pText"><b class="bText"></b>{{form1.studnumber}} &nbsp;Student ID</p>
+                <p class="pText"><b class="bText"></b>{{form1.subject_referred}} &nbsp;Subject Reffered</p>                
        
              
               </div>
