--- a/templates/teacher/teacher_home.html
+++ b/templates/teacher/teacher_home.html
@@ -114,6 +114,7 @@ img {
   color: var(--title-color);
   font-weight: var(--font-medium);
   display: none;
+  font-size: 21px;
 }
 
 .header__search {
@@ -216,7 +217,7 @@ img {
 }
 
 .nav__name {
-  font-size: var(--small-font-size);
+  font-size: var(--normal-font-size);
   font-weight: var(--font-semi-bold);
   white-space: nowrap;
 }
@@ -245,7 +246,7 @@ img {
 }
 
 .nav__dropdown-item {
-  font-size: var(--smaller-font-size);
+  font-size: var(--small-font-size);
   font-weight: var(--font-medium);
   color: var(--navtext-color);
 }
@@ -333,7 +334,9 @@ img {
   }
 
   /* Element opacity */
-  .nav__logo-name, 
+  .nav__logo-name {
+    font-size: 20px;
+  } 
   .nav__name, 
   .nav__subtitle, 
   .nav__dropdown-icon {
@@ -695,7 +698,7 @@ font-size: 15px;
 text-transform: uppercase;
 letter-spacing: 2.5px;
 font-weight: 600;
-color: #fff;
+color: #000;
 background-color: #d8c090;
 border: none;
 border-radius: 8px;
