--- a/templates/counselor/counselor_home.html
+++ b/templates/counselor/counselor_home.html
@@ -110,6 +110,7 @@ img {
   color: var(--title-color);
   font-weight: var(--font-medium);
   display: none;
+  font-size: 21px;
 }
 
 .header__search {
@@ -211,7 +212,7 @@ img {
 }
 
 .nav__name {
-  font-size: var(--small-font-size);
+  font-size: var(--normal-font-size);
   font-weight: var(--font-semi-bold);
   white-space: nowrap;
 }
@@ -240,7 +241,7 @@ img {
 }
 
 .nav__dropdown-item {
-  font-size: var(--smaller-font-size);
+  font-size: var(--small-font-size);
   font-weight: var(--font-medium);
   color: var(--navtext-color);
 }
@@ -328,7 +329,9 @@ img {
   }
 
   /* Element opacity */
-  .nav__logo-name, 
+  .nav__logo-name {
+    font-size: 20px;
+  }
   .nav__name, 
   .nav__subtitle, 
   .nav__dropdown-icon {
@@ -691,7 +694,7 @@ margin-left: 100px; */
              
 
                 <div>
-                              <p style="font-weight: bold; color: #FFFFFF; "> {{form.firstname }} {{form.lastname }} </p>
+                              <p style="font-weight: bold; color: #FFFFFF; font-size: 21px; "> {{form.firstname }} {{form.lastname }} </p>
                                 
                                    </div>
               </div>
@@ -728,9 +731,14 @@ margin-left: 100px; */
                                         <a href="{% url 'counselor_view_pending_students' %}" class="nav__dropdown-item">List of Pending Referrals</a>
                                     </div>  
                                 </div>
+
+                                
                             </div>
 
-                            
+                            <a href="{% url 'counselor_set_schedule' %}" class="nav__link">
+                                <i class='bx bx-calendar nav__icon' ></i>
+                                <span class="nav__name">Set Schedule</span>
+                            </a>
                             
                             <a href="{% url 'counselor_view_schedule' %}" class="nav__link">
                                 <i class='bx bx-calendar nav__icon' ></i>
