--- a/templates/counselor/referred_students.html
+++ b/templates/counselor/referred_students.html
@@ -40,7 +40,7 @@ font-size: 15px;
 text-transform: uppercase;
 letter-spacing: 2.5px;
 font-weight: 600;
-color: #fff;
+color: #000;
 background-color: #d8c090;
 border: none;
 border-radius: 8px;
@@ -165,6 +165,15 @@ outline: none;
 .table_head{
   font-size: 17px;
 }
+  .parent_program{
+ text-align: left; border: solid 1px #DDEEEE;
+color: #333;
+padding: 10px;
+text-shadow: 1px 1px 1px #fff;
+}
+    tr:hover {
+          background-color: #E6E4E4;
+        }
 </style>
 
   <div class="table-cont">
@@ -188,12 +197,12 @@ outline: none;
       {% for object in objects reversed %}
       <tbody>
       <tr>
-                  <td style="font-size: 16px;">{{object.studnumber}}</td>
-                  <td style="font-size: 16px;">{{object.lastname}}, &nbsp; {{object.firstname}}</td>
-                  <td style="font-size: 16px;">{{object.degree_program}}</td>
-                  <td style="font-size: 16px;">{{object.date}}</td>
-                  <td style="font-size: 16px;">{{object.status|title}}</td>
-                  <td style="font-size: 16px;"><a href="{% url 'counselor_view_detail_referred_students' object.id  %}" style="color: black; font-weight: 550;"><b>View More Information</b></a></td>
+                  <td style="font-size: 16px;" class="parent_program">{{object.studnumber}}</td>
+                  <td style="font-size: 16px;" class="parent_program">{{object.lastname}}, &nbsp; {{object.firstname}}</td>
+                  <td style="font-size: 16px;" class="parent_program">{{object.degree_program}}</td>
+                  <td style="font-size: 16px;" class="parent_program">{{object.date}}</td>
+                  <td style="font-size: 16px;" class="parent_program">{{object.status|title}}</td>
+                  <td style="font-size: 16px;" class="parent_program"><a href="{% url 'counselor_view_detail_referred_students' object.id  %}" style="color: black; font-weight: 550;"><b>View More Information</b></a></td>
                 
       </tr>
       <tbody>
@@ -201,7 +210,7 @@ outline: none;
   </table>
   <div style="padding: 2px;">
     {% if not objects %}
-    <center><b><p>No Referrals Yet!</p></b></center>
+    <center><b><p  style="font-size: 18px;">No Referrals Yet!</p></b></center>
          {% endif %}  
   </div>
 </div>
