--- a/templates/counselor/students_referral_information.html
+++ b/templates/counselor/students_referral_information.html
@@ -36,14 +36,12 @@
     text-align: justify;
     border: 2px solid black;
     border-radius: 15px;
-    box-shadow:
-      5 90px 50px rgba(0, 0, 0, 0.07);
-    min-width: 550px;
+    box-shadow: 5 90px 50px rgba(0, 0, 0, 0.07);
+    min-width: 90vw;
     min-height: 200px;
-
-  width: 100px;
-  text-overflow: ellipsis; 
-  margin-left: 75px;
+    width: 100px;
+    text-overflow: ellipsis; 
+    align-items: left;
 
 }
 
@@ -95,6 +93,14 @@
     .table-row {
       font-size: 11px;
       margin: auto;
+    }
+    .box{
+      display: flex;
+      flex-direction: column;
+    }
+    .schedule_appointment{
+         display: flex;
+      flex-direction: column;
     }
   }
   .trow-list{
@@ -223,8 +229,7 @@
   
 }
 .rowText{
-  font-size: 20px;
-
+  font-size: 24px;
   margin: auto;
 }
 .image{
@@ -291,7 +296,7 @@ font-size: 15px;
 text-transform: uppercase;
 letter-spacing: 2.5px;
 font-weight: 600;
-color: #fff;
+color: #000;
 background-color: #d8c090;
 border: none;
 border-radius: 8px;
@@ -300,7 +305,7 @@ transition: all 0.3s ease 0s;
 cursor: pointer;
 outline: none;
 }
-.card1 {
+/* .card1 {
    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
   transition: 0.3s;
   width: 40%;
@@ -308,18 +313,18 @@ outline: none;
   border-radius: 5px;
   float: center;
   margin-left: auto;
-/* margin: auto;
-  text-align: center; */
+  margin: auto;
+  text-align: center;
   overflow: hidden;
   background-color: whitesmoke;
-}
+} */
 @media screen and (max-width: 320px) {
   .header__search {
     width: 70%;
   }
-  .card1{
+  /* .card1{
     width: 70%;
-  }
+  } */
 }
 .wrap {
   height: 100%;
@@ -354,6 +359,16 @@ outline: none;
   color: #fff;
   transform: translateY(-7px);
 }
+.schedule_appointment{
+align-items: center;
+display: inline-block;
+}
+.schedule_title{
+font-size: 23px;
+}
+.schedule_information{
+float: left;
+}
 
 </style>
 <br>
@@ -366,29 +381,31 @@ outline: none;
  {% if not object.subject_referred %}
 
   <br> <br> <br>
-<div class="card1">
+<div>
   <br>
          
-            <form action="#" class="cleanForm" method="POST">
-              {% csrf_token %}
+            <!-- <form action="#" class="cleanForm" method="POST">
+              {% csrf_token %} -->
            
               
-             <div>
-               <h3 style="text-align: justify; margin-left:8px; font-size: 20px;"><i>Schedule of Appointment</i></h3>
+             <div class="schedule_appointment">
+              <div class="schedule_title"> <h3><i>Schedule of Appointment</i></h3></div>
                <br> <br>
-    <p class="rowText">
+<div class="schedule_information">
+      <p class="rowText">
       You are scheduled for an appointment.
-      The Session starts at <b>{{object.start_time}}</b> and ends at <b> {{object.end_time}}</b> on <b> {{object.date}}</b>  <br> 
-      <i>With the Reasons stated below:</i>
+      The Session starts at <b>{{object.start_time}}</b> and ends at <b> {{object.end_time}}</b> on <b> {{object.date}}</b><br>
+       <br>
+     <br> <i>With the Reasons stated below:</i><br>
+     <br>
     <div id="box">
       <li class="Pbox" style="text-align: justify; margin-left:8px;"><b>{{object.reasons}}</b></li>
     </div>
     </p>
+</div>
     </div>
-                
-            
-            </form>
-            <br> 
+            <!-- </form> -->
+            <br> <br>
    {% if object.feedback is None %}
     {% if type == 'teacher' %}
     <div class="wrap">
@@ -408,9 +425,6 @@ outline: none;
     {% endif %} 
     
 </div>
- 
-
-
 
      {% else %}
      <!-- ANOTHER PARTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTT -->
@@ -420,49 +434,56 @@ outline: none;
   </div>  
 
   <br> <br> <br>
-<div class="card1">
+<!-- <div class="card1"> -->
   <br>
-  <form action="#" class="cleanForm" method="POST">
-    <br>
+  <!-- <form action="#" class="cleanForm" method="POST">
+    <br> -->
     
     <!-- <div class="column">
     <div class="row">   -->
 
-    
-    
     {% if not object.behavior_problem %}
-   
-    <div>
-       <h3 style="text-align: justify; margin-left:8px; font-size: 20px;"><i>Schedule of Appointment</i></h3>
-       <br> <br>
-    <p class="rowText">
-      
+
+                 <div class="schedule_appointment">
+              <div class="schedule_title"> <h3><i>Schedule of Appointment</i></h3></div>
+               <br> <br>
+<div class="schedule_information">
+      <p class="rowText">
       <b>{{object.lastname}}</b> is referred.</b> 
-      The Session starts at <b>{{object.start_time}}</b> and ends at <b>{{object.end_time}}</b> on <b>{{object.date}}</b>  <br> 
-     <i> With the Reasons stated below:</i>
+      The Session starts at <b>{{object.start_time}}</b> and ends at <b>{{object.end_time}}</b> on <b>{{object.date}}</b><br> 
+       <br>
+     <br> <i>With the Reasons stated below:</i><br>
+     <br>
     <div id="box">
-      <li class="Pbox" style="text-align:justify; margin-left:8px;"><b>{{object.reasons}}</b></li>
+      <li class="Pbox" style="text-align: justify; margin-left:8px;"><b>{{object.reasons}}</b></li>
     </div>
     </p>
+</div>
     </div>
+
     {% else %}  
-   
-    <div>
-       <h3 style="text-align: justify; margin-left:8px; font-size: 20px;"><i>Schedule of Appointment</i></h3>
-       <br> <br>
-    <p class="rowText">
+                     <div class="schedule_appointment">
+              <div class="schedule_title"> <h3><i>Schedule of Appointment</i></h3></div>
+               <br> <br>
+<div class="schedule_information">
+      <p class="rowText">
       <b>{{object.lastname}}</b> is referred due to as having a behavior problem of <b> {{object.behavior_problem | title}}.</b> 
-      The Session starts at <b>{{object.start_time}}</b> and ends at <b>{{object.end_time}}</b> on <b>{{object.date}}</b>  <br><br>
-     <i> With the Reasons stated below:</i>
+      The Session starts at <b>{{object.start_time}}</b> and ends at <b>{{object.end_time}}</b> on <b>{{object.date}}</b><br>
+       <br>
+     <br> <i>With the Reasons stated below:</i><br>
+     <br>
     <div id="box">
-      <li class="Pbox" style="text-align:justify; margin-left:8px;"><b>{{object.reasons}}</b></li>
+      <li class="Pbox" style="text-align: justify; margin-left:8px;"><b>{{object.reasons}}</b></li>
     </div>
     </p>
+</div>
     </div>
+
+    
     {% endif %}  
 
-    </form>
-    <br> 
+    <!-- </form> -->
+    <br> <br>
     {% if object.feedback is None %}
     {% if type == 'teacher' %}
 <center><a href="{% url 'counselor_feedback' object.id %}">  
@@ -479,7 +500,7 @@ outline: none;
     {% endif %}  
 <br>
     
-</div>
+<!-- </div> -->
 <br>
 
     {% endif %}  
