--- a/templates/counselor/view_another_feedback.html
+++ b/templates/counselor/view_another_feedback.html
@@ -40,7 +40,7 @@ View Another Feedback
   text-transform: uppercase;
   letter-spacing: 2.5px;
   font-weight: 600;
-  color: #fff;
+  color: #000;
   background-color: #d8c090;
   border: none;
   border-radius: 8px;
@@ -160,7 +160,7 @@ View Another Feedback
       }
   }
   .table_head{
-    font-size: 14px;
+    font-size: 18px;
   }
 
     .button {
@@ -191,10 +191,15 @@ View Another Feedback
 
 text-align: center;
 margin-right: 20px;
+font-size: 18.5px;
 }
   .center {
 
 text-align: center;
+}
+#id_pickedDate{
+    width: 10vw;
+    height: 3vh;
 }
   </style>
 
@@ -229,11 +234,11 @@ text-align: center;
       {% for object in student reversed %}
       <tbody>
       <tr>
-          <td style="font-size: 16px;">{{object.date}}</td>
-          <td style="font-size: 16px;">{{object.studnumber}}</td>
-          <td style="font-size: 16px;">{{object.degree_program}}</td>
-          <td style="font-size: 16px;">{{object.lastname}}, &nbsp; {{object.firstname}}</td>
-          <td style="font-size: 16px;"><a href="{% url 'counselor_view_detail_feedback' object.id %}" style="color: black; font-weight: 550;"><b>View More Information</b></a></td>
+          <td style="font-size: 17px;">{{object.date}}</td>
+          <td style="font-size: 17px;">{{object.studnumber}}</td>
+          <td style="font-size: 17px;">{{object.degree_program}}</td>
+          <td style="font-size: 17px;">{{object.lastname}}, &nbsp; {{object.firstname}}</td>
+          <td style="font-size: 17px;"><a href="{% url 'counselor_view_detail_feedback' object.id %}" style="color: black; font-weight: 550;"><b>View More Information</b></a></td>
         
       </tr>
       <tbody>
@@ -241,7 +246,7 @@ text-align: center;
   </table>
   <div style="padding: 2px;">
       {% if not student %}
-      <center><b><p>No Feedbacks Yet!</p></b></center>
+      <center><b><p style="font-size: 18px;">No Feedbacks Yet!</p></b></center>
       {% endif %}
   </div>
 </div>
