--- a/templates/counselor/view_feedback.html
+++ b/templates/counselor/view_feedback.html
@@ -40,7 +40,7 @@ View Feedback
   text-transform: uppercase;
   letter-spacing: 2.5px;
   font-weight: 600;
-  color: #fff;
+  color: #000;
   background-color: #d8c090;
   border: none;
   border-radius: 8px;
@@ -194,10 +194,24 @@ View Feedback
 
 text-align: center;
 margin-right: 20px;
+font-size: 18.5px;
 }
   .center {
 
 text-align: center;
+}
+  .students_info{
+ text-align: left; border: solid 1px #DDEEEE;
+color: #333;
+padding: 10px;
+text-shadow: 1px 1px 1px #fff;
+}
+    tr:hover {
+          background-color: #E6E4E4;
+        }
+        #id_pickedDate{
+    width: 10vw;
+    height: 3vh;
 }
   </style>
 
@@ -232,11 +246,11 @@ text-align: center;
       {% for object in student reversed %}
       <tbody>
       <tr>
-          <td style="font-size: 16px;">{{object.date}}</td>
-          <td style="font-size: 16px;">{{object.studnumber}}</td>
-          <td style="font-size: 16px;">{{object.degree_program}}</td>
-          <td style="font-size: 16px;">{{object.lastname}}, &nbsp; {{object.firstname}}</td>
-          <td style="font-size: 16px;"><a href="{% url 'counselor_view_detail_feedback' object.id %}" style="color: black; font-weight: 550;"><b>View More Information</b></a></td>
+          <td style="font-size: 17px;" class="students_info">{{object.date}}</td>
+          <td style="font-size: 17px;" class="students_info">{{object.studnumber}}</td>
+          <td style="font-size: 17px;" class="students_info">{{object.degree_program}}</td>
+          <td style="font-size: 17px;" class="students_info">{{object.lastname}}, &nbsp; {{object.firstname}}</td>
+          <td style="font-size: 17px;" class="students_info"><a href="{% url 'counselor_view_detail_feedback' object.id %}" style="color: black; font-weight: 550;"><b>View More Information</b></a></td>
         
       </tr>
       <tbody>
@@ -244,7 +258,7 @@ text-align: center;
   </table>
   <div style="padding: 2px;">
       {% if not student %}
-      <center><b><p>No Feedbacks Yet!</p></b></center>
+      <center><b><p  style="font-size: 18px;">No Feedbacks Yet!</p></b></center>
       {% endif %}
   </div>
 </div>
