--- a/templates/director/director_home.html
+++ b/templates/director/director_home.html
@@ -114,6 +114,7 @@ img {
   color: var(--title-color);
   font-weight: var(--font-medium);
   display: none;
+  font-size: 21px;
 }
 
 .header__search {
@@ -215,7 +216,7 @@ img {
 }
 
 .nav__name {
-  font-size: var(--small-font-size);
+  font-size: var(--normal-font-size);
   font-weight: var(--font-medium);
   white-space: nowrap;
 }
@@ -244,7 +245,7 @@ img {
 }
 
 .nav__dropdown-item {
-  font-size: var(--smaller-font-size);
+  font-size: var(--small-font-size);
   font-weight: var(--font-medium);
   color: var(--navtext-color);
 }
@@ -332,7 +333,9 @@ img {
   }
 
   /* Element opacity */
-  .nav__logo-name, 
+  .nav__logo-name {
+    font-size: 20px;
+  }
   .nav__name, 
   .nav__subtitle, 
   .nav__dropdown-icon {
@@ -575,12 +578,10 @@ margin-left: 100px; */
         <header class="header">
             <div class="header__container">
                 <img style="height:50px; " src="https://1.bp.blogspot.com/-zssvz_H77as/YSdIaUUbIbI/AAAAAAAAAf0/xhPKHM0G8dczMa5vP7MPCZvNVeZQkpKgACLcBGAsYHQ/w945-h600-p-k-no-nu/logo3.png"></img>
-                <a style="font-weight: bold;margin-right:  auto; color: #FFFFFF;  font-family: 'Sawarabi Gothic', serif; 
-                letter-spacing: 2px;" 
-                href="{% url 'director_home_view' %}" class="header__logo">FOLLOW APP</a>
+                 <a style="font-weight: bold; margin-right:  auto; color: #FFFFFF; " href="{% url 'director_home_view' %}"  class="header__logo">FOLLOW APP</a>
       <div>
                        
-                              <p style="font-weight: bold; color: #FFFFFF;"> {{object.firstname }} {{object.lastname }} </p>
+                              <p style="font-weight: bold; color: #FFFFFF; font-size: 21px;"> {{object.firstname }} {{object.lastname }} </p>
                                
                                    </div>
             </div>
@@ -618,8 +619,8 @@ margin-left: 100px; */
 
                                 <div class="nav__dropdown-collapse">
                                     <div class="nav__dropdown-content">
-                                        <a href="{% url 'counselor_view_referred_students' %}" class="nav__dropdown-item">Degree Program</a>
-                                        <a href="{% url 'counselor_view_pending_students' %}" class="nav__dropdown-item">Counselor</a>
+                                        <a href="{% url 'director_degree_program' %}" class="nav__dropdown-item">Degree Program</a>
+                                        <a href="{% url 'director_counselor' %}" class="nav__dropdown-item">Counselor</a>
                                     </div>  
                                 </div>
                             </div>
