--- a/templates/director/form.html
+++ b/templates/director/form.html
@@ -7,7 +7,7 @@
 .offering{
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
   transition: 0.3s;
-  width: 600px;
+  width: 650px;
   min-height: 530px;
   /* height: 300px; */
   border-radius: 5px;
@@ -87,8 +87,8 @@ font-family: 'Roboto', sans-serif;
 font-size: 15px;
 text-transform: uppercase;
 letter-spacing: 2.5px;
-font-weight: 600;
-color: #fff;
+font-weight: bolder;
+color: #000;
 background-color: #d8c090;
 border: none;
 border-radius: 8px;
@@ -104,7 +104,7 @@ outline: none;
 #id_program_designation{
   width: 230px;
   text-align: left;
-  font-size: 16px;
+  font-size: 16.5px;
   margin: auto;
 }
     .message {
@@ -124,6 +124,15 @@ outline: none;
     transition: all 0.3s ease 0s;
     cursor: pointer;
     outline: none;
+    }
+    #id_firstname{
+      font-size: 16.5px;
+    }
+    #id_lastname{
+      font-size: 16.5px;
+    }
+    .pText{
+      font-size: 18px;
     }
 </style>
 
