--- a/templates/student/another_sched.html
+++ b/templates/student/another_sched.html
@@ -130,7 +130,7 @@ Schedule
   text-transform: uppercase;
   letter-spacing: 2.5px;
   font-weight: 600;
-  color: #fff;
+  color: #000;
   background-color: #d8c090;
   border: none;
   border-radius: 8px;
