--- a/templates/student/notif_detail.html
+++ b/templates/student/notif_detail.html
@@ -132,7 +132,7 @@ font-size: 15px;
 text-transform: uppercase;
 letter-spacing: 2.5px;
 font-weight: 600;
-color: #fff;
+color: #000;
 background-color: #d8c090;
 border: none;
 border-radius: 8px;
@@ -161,7 +161,7 @@ word-break: break-word;
         <div class="fac">
           <button type="submit" class="buttonF">Full Details</button>
         </div> 
-<br>
+<br> butangan og call button 
         
 {% for object in object_list %}
 <div id="wrapper">
@@ -181,9 +181,7 @@ word-break: break-word;
                 <div class="trow-list">
                   <p class="Pbox">
                     You have a scheduled appointment on <b>{{object.date}}</b> that will start at <b>{{object.start_time}}</b>
-                    and will end at <b>{{object.end_time}}</b> In <b>{{object.subject_referred}}</b> Subject, with the behavioral problem of <b>{{object.behavior_problem}}</b>. <br>
-                    <br> With the Reasons stated below:
-                    <li class="Pbox" style="text-align:left;"><b>{{object.reasons}}</b></li>
+                    and will end at <b>{{object.end_time}}</b> 
                   </p>
               </div>
 
@@ -195,9 +193,7 @@ word-break: break-word;
                 <div class="trow-list">
                   <p class="Pbox">
                     You have a scheduled appointment on <b>{{object.date}}</b> that will start at <b>{{object.start_time}}</b>
-                    and will end at <b>{{object.end_time}}</b> In <b>{{object.subject_referred}}</b> Subject, 
-                    <br> With the Reasons stated below:
-                    <li class="Pbox" style="text-align:left;"><b>{{object.reasons}}</b></li>
+                  and will end at <b>{{object.end_time}}</b> 
                   </p>
               </div>
 
@@ -212,8 +208,6 @@ word-break: break-word;
     <p class="Pbox">
       You have a schedule appointment on <b>{{object.date}}</b> that will start at <b> {{object.start_time}}</b>
       and will end at <b>{{object.end_time}}</b> <br>
-      <br> With the Reasons stated below:
-      <li class="Pbox" style="text-align:left;"><b>{{object.reasons}}</b></li>
     </p>
 </div>
 
