--- a/templates/student/student_home.html
+++ b/templates/student/student_home.html
@@ -125,6 +125,7 @@ img {
   color: var(--title-color);
   font-weight: var(--font-medium);
   display: none;
+  font-size: 21px;
 }
 
 .header__search {
@@ -247,7 +248,7 @@ img {
 }
 
 .nav__name {
-  font-size: var(--small-font-size);
+  font-size: var(--normal-font-size);
   font-weight: var(--font-medium);
   white-space: nowrap;
 }
@@ -276,7 +277,7 @@ img {
 }
 
 .nav__dropdown-item {
-  font-size: var(--smaller-font-size);
+  font-size: var(--small-font-size);
   font-weight: var(--font-medium);
   color: var(--navtext-color);
 }
@@ -364,7 +365,9 @@ img {
   }
 
   /* Element opacity */
-  .nav__logo-name, 
+  .nav__logo-name {
+    font-size: 20px;
+  } 
   .nav__name, 
   .nav__subtitle, 
   .nav__dropdown-icon {
@@ -699,12 +702,10 @@ margin-left: 100px; */
                
  
                 <img style="height:50px; " src="https://1.bp.blogspot.com/-zssvz_H77as/YSdIaUUbIbI/AAAAAAAAAf0/xhPKHM0G8dczMa5vP7MPCZvNVeZQkpKgACLcBGAsYHQ/w945-h600-p-k-no-nu/logo3.png"></img>
-                <a style="font-weight: bold;margin-right:  auto; color: #FFFFFF;  font-family: 'Sawarabi Gothic', serif; 
-                letter-spacing: 2px;" 
-                href="{% url 'student_home_view' %}" class="header__logo">FOLLOW APP</a>
+                <a style="font-weight: bold; margin-right:  auto; color: #FFFFFF; " href="{% url 'student_home_view' %}"  class="header__logo">FOLLOW APP</a>
                 <div>
                 
-                              <p style="font-weight: bold;  color: #FFFFFF;"> {{form.firstname }} {{form.lastname }} </p>
+                              <p style="font-weight: bold;  color: #FFFFFF; font-size: 21px;"> {{form.firstname }} {{form.lastname }} </p>
                                    
                                    </div>
               </div>
