--- a/templates/student/view_history.html
+++ b/templates/student/view_history.html
@@ -37,7 +37,7 @@ Notifications
   text-transform: uppercase;
   letter-spacing: 2.5px;
   font-weight: 600;
-  color: #fff;
+  color: #000;
   background-color: #d8c090;
   border: none;
   border-radius: 8px;
@@ -165,6 +165,15 @@ Notifications
     .t-body{
     font-size: 20px;
   }
+    .history_form{
+ text-align: left; border: solid 1px #DDEEEE;
+color: #333;
+padding: 10px;
+text-shadow: 1px 1px 1px #fff;
+}
+    tr:hover {
+          background-color: #E6E4E4;
+        }
   </style>
 
   <div class="table-cont">
@@ -187,9 +196,9 @@ Notifications
                   
 {% if couns.employee_id == obj.counselor %}
               <tr>
-                  <td style="font-size: 16px;">{{couns.lastname}}, &nbsp; {{couns.firstname}}</td>
-                  <td style="font-size: 16px;">{{obj.date}}</td>
-                  <td style="font-size: 16px;">{{obj.start_time}} - {{obj.end_time}}</td>
+                  <td style="font-size: 16px;" class="history_form">{{couns.lastname}}, &nbsp; {{couns.firstname}}</td>
+                  <td style="font-size: 16px;" class="history_form">{{obj.date}}</td>
+                  <td style="font-size: 16px;" class="history_form">{{obj.start_time}} - {{obj.end_time}}</td>
               </tr>
               <tbody>
                 {% endif %}
