--- a/templates/teacher/list_referred_students.html
+++ b/templates/teacher/list_referred_students.html
@@ -141,7 +141,7 @@ font-size: 15px;
 text-transform: uppercase;
 letter-spacing: 2.5px;
 font-weight: 600;
-color: #fff;
+color: #000;
 background-color: #d8c090;
 border: none;
 border-radius: 8px;
@@ -188,6 +188,15 @@ outline: none;
   #id_filter_choice{
 min-width: 180px;
   }
+  .parent_program{
+ text-align: left; border: solid 1px #DDEEEE;
+color: #333;
+padding: 10px;
+text-shadow: 1px 1px 1px #fff;
+}
+    tr:hover {
+          background-color: #E6E4E4;
+        }
 
 
 </style>
@@ -222,12 +231,12 @@ min-width: 180px;
         <tbody>
         <tr>
 
-            <td style="font-size: 16px;">{{object.date}}</td>
-            <td style="font-size: 16px;">{{object.studnumber}}</td>
-            <td style="font-size: 16px;">{{object.lastname}}, &nbsp; {{object.firstname}}</td>
-            <td style="font-size: 16px;">{{object.degree_program}}</td>
-            <td style="font-size: 16px;">{{object.status|title}}</td>
-            <td style="font-size: 16px;" style="color: black;" ><a href="{% url 'teacher_view_detail_referred_students' object.id %}" style="font-weight: 550; color: black;">View More Information</a></td>
+            <td style="font-size: 16px;" class="parent_program">{{object.date}}</td>
+            <td style="font-size: 16px;" class="parent_program">{{object.studnumber}}</td>
+            <td style="font-size: 16px;" class="parent_program">{{object.lastname}}, &nbsp; {{object.firstname}}</td>
+            <td style="font-size: 16px;" class="parent_program">{{object.degree_program}}</td>
+            <td style="font-size: 16px;"class="parent_program">{{object.status|title}}</td>
+            <td style="font-size: 16px; color: black;" class="parent_program"><a href="{% url 'teacher_view_detail_referred_students' object.id %}" style="font-weight: 550; color: black;">View More Information</a></td>
 
         
         </tr>
@@ -235,9 +244,11 @@ min-width: 180px;
               {% endfor %}
 
     </table>
-    {% if not object_list %}
-  <center><p style="padding: 10px;"><b>No Students Yet!</b></p></center>
-  {% endif %}
+      <div style="padding: 2px;">
+   {% if not object_list %}
+<center><p style="font-size: 18px;"><b>No Students Yet!</b></p></center>
+         {% endif %}  
+  </div>
   </div>
 
 
